--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
 	<nav class="navbar-fixed-top nav-bar">
 	  <ul class="nav-pills">
 		 <li class="nav-active nav-top1"><a href="javascript:;">Home <div></div></a></li>   
-		 <li><a href="demox.html" target="_blank">作品案例 <span></span></a></li>	
+		 <li><a href="https://qdlyh.github.io/test/demo.html" target="_blank">作品案例 <span></span></a></li>	
 		 <li><a href="https://qdlyh.github.io/cjb/demo.html#page3" target="_blank">个人简介<span></span></a></li>
          <li class="tail"><a href="javascript:;" target="_blank">联系方式<span></span></a></li>		          
        </ul>
@@ -27,7 +27,7 @@
 	<img class="nav-btn2" src="img/btn.png" alt="">
 		<dl class="nav-dl">
              <dt class="nav-top1"><a href="javascript:;">Home <div></div></a></dt>
-             <dd><a href="demox.html">作品案例 <span></span></a></dd>
+             <dd><a href="https://qdlyh.github.io/test/demo.html">作品案例 <span></span></a></dd>
              <dd><a href="https://qdlyh.github.io/cjb/demo.html#page3" target="_blank">个人简历 <span></span></a></dd>
              <dd class="tail-dd"><a href="javascript:;">联系方式 <span></span></a></dd>
         </dl>
@@ -37,7 +37,7 @@
       <div class="home1-bar">
  			<h1>冰淇淋</h1>
  			<h2>冰淇淋是一种极具诱惑力的美味冷冻奶制品<h2>		
- 	     <a href="demox.html" class="btn home1-btn">查看更多</a>
+ 	     <a href="https://qdlyh.github.io/test/demo.html" class="btn home1-btn">查看更多</a>
       </div>
  </div>
 <div class="home-2">
