--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
 	<nav class="navbar-fixed-top nav-bar">
 	  <ul class="nav-pills">
 		 <li class="nav-active nav-top1"><a href="javascript:;">Home <div></div></a></li>   
-		 <li><a href="https://qdlyh.github.io/test/demo.html" target="_blank">作品案例 <span></span></a></li>	
+		 <li><a href="https://qdlyh.github.io/test/demo.html">作品案例 <span></span></a></li>	
 		 <li><a href="https://qdlyh.github.io/cjb/demo.html#page3" target="_blank">个人简介<span></span></a></li>
          <li class="tail"><a href="javascript:;" target="_blank">联系方式<span></span></a></li>		          
        </ul>
