--- a/demo.html
+++ b/demo.html
@@ -134,7 +134,7 @@
 <div class="top"><img src="img/top.png" alt=""></div>
   <div class="container-fluid footer-bar">
     <h2>联系作者</h2>
-      <h4 style="padding-top: 20px;">电话: 13030217219<br/>
+      <h4 style="padding-top: 20px;">电话: <br/>
        邮箱: liang620523@163.com</h4>
       <br/>  
   </div>
